--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
 
-        <kex-intrinsics.version>0.0.7</kex-intrinsics.version>
+        <kex-intrinsics.version>0.1.0</kex-intrinsics.version>
     </properties>
 
     <repositories>
@@ -24,7 +24,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains.research</groupId>
+            <groupId>org.vorpal.research</groupId>
             <artifactId>kex-intrinsics</artifactId>
             <version>${kex-intrinsics.version}</version>
         </dependency>
